--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
@@ -19,7 +19,9 @@
         <div class="four wide column">
           <div class="ui form">
             <div class="field">
-              <select class="ui search dropdown" id="department"></select>
+              <select class="ui search dropdown" id="department">
+                <option value="">หน่วยงาน</option>
+              </select>
             </div>
           </div>
         </div>
@@ -55,7 +57,6 @@
             <th>Action</th>
           </tr>
         </thead>
-       
       </table>
       <br><br>
     <div class="ui form center aligned grid">
