--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-2/int09-2-1-2.component.html
@@ -1,23 +1,24 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>รายงานประมาณการค่าใช้จ่ายในการเดินทาง</span>
   </div>
-  <div class="ui form center aligned" id="int09-1"  ngNativeValidate>
+  <form (ngSubmit)="saveAndNext($event)">
+  <div class="ui form center aligned" id="int09-1"  ngNativeValidate >
     <div class="ui attached  segment">
         <div class="ui two column centered grid">
             <div class="two wide column"><label>สรรพสามิตภาค</label></div>
-            <div class="five wide column"><input type="text" id="money"></div>           
+            <div class="five wide column"><input type="text" id="sector" name="sector"></div>           
         </div>
         <div class="ui two column centered grid">       
             <div class="two wide column"><label>สรรพสามิตพื้นที่</label></div>
-            <div class="five wide column"><input type="text" id="department"></div> 
+            <div class="five wide column"><input type="text" id="area" name="area"></div> 
         </div>
         <div class="ui two column centered grid">       
             <div class="two wide column"><label>สรพพสามิตสาขา</label></div>
-            <div class="five wide column"><input type="text" id="money"></div>
+            <div class="five wide column"><input type="text" id="branch" name="branch"></div>
         </div>
         <div class="ui two column centered grid">       
             <div class="two wide column"><label>หน่วยงานผู้ตรวจ</label></div>
-            <div class="five wide column"><input type="text" id="department"></div>
+            <div class="five wide column"><input type="text" id="department" name="department"></div>
         </div>     
       <div class="ui grid">
           <div class="three wide column"></div>
@@ -26,7 +27,7 @@
             <div class="ui calendar" id="startDate">
               <div class="ui input left icon">
                   <i class="time icon"></i>
-                  <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                  <input type="text" id="startDateInput" name="startDateInput" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
               </div>
             </div>
         </div>
@@ -35,7 +36,7 @@
               <div class="ui calendar" id="endDate">
                   <div class="ui input left icon">
                       <i class="time icon"></i>
-                      <input type="text" name="date-raw" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                      <input type="text"id="endDateInput"  name="endDateInput" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
                   </div>
               </div>
           </div>
@@ -44,8 +45,9 @@
       </div>
   
       <div class="ui form center aligned grid">
-          <button class="ui  primary button" routerLink="/int09/2-1-3"  type="button" ><i class="file outline icon"></i> บันทึก</button>
+          <button class="ui  primary button" type="submit" ><i class="file outline icon"></i> บันทึก</button>
       </div>  
       <br>      
     </div>
   </div>
+</form>
