--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-3/int09-2-1-3.component.html
@@ -9,6 +9,12 @@
             <p><b>เดินทางไปราชการที่ สำนักงานสรรพสามิตพื้นที่เลย</b></p>
             <p><b>ตั้งแต่วันที่ 17 มิถุนายน 2561 - 30 มิถุนายน 2561</b></p>
             <p><b>{{hesderTxt.sector}}</b></p>
+            <p><b>{{hesderTxt.area}}</b></p>
+            <p><b>{{hesderTxt.branch}}</b></p>
+            <p><b>{{hesderTxt.department}}</b></p>
+            <p><b>{{hesderTxt.startDateInput}} - {{hesderTxt.endDateInput}}</b></p>
+            
+            
         </div>
         <br><br>
         <input type="hidden" id="idEdit">
