int09223 front end

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-1-1/int09-2-1-1.component.html
@@ -14,7 +14,8 @@
                 <i class="time icon"></i>
                 <input type="text" name="date-raw" id="year1" autocomplete="off" [attr.readonly]="null" placeholder="yyyy" [attr.required]="true">
             </div>
-        </div></div>
+          </div>
+      </div>
         <div class="two wide column"><label>หน่วยงาน</label></div>
         <div class="four wide column">
           <div class="ui form">
