--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-2-2/int09-2-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-2/int09-2-2-2/int09-2-2-2.component.html
@@ -39,7 +39,7 @@
         <div class="two wide column"></div>
         <div class="two wide column"><label>ชื่อส่วนราชการ</label></div>
         <div class="four wide column"><input type="text" id="nameOrg"></div>
-        <div class="two wide column"><label>ประเภทเอกสาร</label></div>
+        <div class="two wide column"><label>ผู้เบิก</label></div>
         <div class="four wide column">
             <div class="four wide column"><input type="text" id="nameOrg"></div>
         </div>
