--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -13,6 +13,12 @@
           <div class="four wide field ">
             <input type="text" placeholder="ปัจจัยเสี่ยง" class="custom" name="riskHdrName" id="riskHdrName" [(ngModel)]="riskHdrName">
           </div>
+          <div class="two wide field">
+            <label>ปีงบประมาณ</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="buggetYear" id="buggetYear" [(ngModel)]="buggetYear">
+          </div>
           <div class="four wide field ">
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
               <i class="add icon"></i>
@@ -25,6 +31,7 @@
             <tr>
               <th>ลำดับ</th>
               <th>ปัจจัยเสี่ยง</th>
+              <th>ปีงบประมาณ</th>
               <th>วันที่สร้าง</th>
               <th>ผู้สร้าง</th>
               <th>สถานะการใช้งาน</th>
@@ -32,7 +39,20 @@
             </tr>
           </thead>
         </table>
+        <div class="inline fields"></div>
+        <div class="inline fields ">
+          <div class="sixteen wide field ">
+            <div class="six wide field "></div>
+            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+              <i class="save icon"></i>
+              บันทึก
+            </button>
+            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+              กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
+            </button>
+          </div>
 
+        </div>
       </div>
 
 
